# technical-test-data-engineer

./: MANIFEST.in  config.py  data_flow.py  data_processing.py  kap_music_data.db  main.py  music_data.db  pyproject.toml  requirements.txt  sql_commands.py
docs/: ANSWERS.md  ANSWER_ENGLISH.md
src/: __init__.py  main.py
src/api_interact/: __init__.py  api_interaction.py
src/cli/: cli.py
src/data_processing/: __init__.py  data_processing.py
src/data_retrieval/: __init__.py  data_retrieval.py
src/database/: __init__.py  database.py
src/kap_moovita_mix_pipeline/: __init__.py  config.py  main.py  run_tests.py
src/kap_moovita_mix_pipeline/api_interact/: __init__.py  api_interaction.py
src/kap_moovita_mix_pipeline/cli/: __init__.py  cli.py
src/kap_moovita_mix_pipeline/data_processing/: __init__.py  data_processing.py
src/kap_moovita_mix_pipeline/data_retrieval/: data_retrieval.py
src/kap_moovita_mix_pipeline/database/: __init__.py  database.py  database_functions.py  sql_commands.py
src/kap_moovita_mix_pipeline/scheduler/: scheduler.py
src/moovitamix_fastapi/: generate_fake_data.py  main.py
src/scheduler/: __init__.py  scheduler.py
test/test_kap_moovita_mix_pipeline/: test_api_interact.py  test_cli.py  test_data_processing.py  test_data_retreival.py  test_scheduler.py
