[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kap-moovita-mix-pipeline"
version = "0.1.0"
description = "A data pipeline for MoovitaMix"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.6.2.post1",
    "certifi==2024.8.30",
    "charset-normalizer==3.4.0",
    "click==8.1.7",
    "colorama==0.4.6",
    "Faker==30.6.0",
    "fastapi==0.115.2",
    "fastapi-pagination==0.12.31",
    "h11==0.14.0",
    "httpcore==1.0.6",
    "httpx==0.27.2",
    "idna==3.10",
    "iniconfig==2.0.0",
    "packaging==24.1",
    "pluggy==1.5.0",
    "pydantic==2.9.2",
    "pydantic_core==2.23.4",
    "python-dateutil==2.9.0.post0",
    "requests==2.32.3",
    "schedule==1.2.2",
    "six==1.16.0",
    "sniffio==1.3.1",
    "starlette==0.40.0",
    "typing_extensions==4.12.2",
    "urllib3==2.2.3",
    "uvicorn==0.32.0",
    "pytest==8.3.3"
]

[project.optional-dependencies]
dev = ["pytest==8.3.3"]

[project.scripts]
start-pipeline = "kap_moovita_mix_pipeline.main:main"
start-server = "moovitamix_fastapi.main:start_server"
run-tests = "kap_moovita_mix_pipeline.run_tests:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["kap_moovita_mix_pipeline*", "moovitamix_fastapi*"]

[tool.setuptools.package-data]
kap_moovita_mix_pipeline = ["py.typed"]
moovitamix_fastapi = ["py.typed"]

[project.urls]
"Homepage" = "https://github.com/yourusername/kap-moovita-mix-pipeline"
"Bug Tracker" = "https://github.com/yourusername/kap-moovita-mix-pipeline/issues"